tests/NormalTests/paczka1/small_fuzzy/61277812.err
Error in line 1: pEhNB A165 52,1
Error in line 2: 44b687G A219 89,4
Error in line 10: pEhNB A165 94,9
